feat: basic camera

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <title>css3d</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="app.js" defer></script>
+    <!-- <script src="rot.js" defer></script> -->
+    <script src="camera.js" defer></script>
   </head>
   <body>
-    <div id="scene"></div>
+    <div id="viewport">
+      <div id="scene"></div>
+    </div>
   </body>
 </html>
