feat: shooting logic

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <div id="viewport">
       <div id="scene"></div>
     </div>
+    <div class="crosshair-wrapper">
+      <div class="crosshair"></div>
+    </div>
   </body>
 </html>
