refactor: rename modules

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <title>css3d</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="app.js" defer></script>
-    <!-- <script src="rot.js" defer></script> -->
-    <script src="camera.js" defer></script>
+    <script src="world.js" defer></script>
+    <script src="player.js" defer></script>
   </head>
   <body>
     <div id="viewport">
@@ -14,6 +13,11 @@
     </div>
     <div class="crosshair-wrapper">
       <div class="crosshair"></div>
+    </div>
+    <div class="hud">
+      <div id="health"></div>
+      <div id="suit"></div>
+      <div id="ammo"></div>
     </div>
   </body>
 </html>
