feat: add viewmodel

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     ></script>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="playermodel.css" />
+    <link rel="stylesheet" href="viewmodel.css" />
     <script src="world.js" defer></script>
     <script src="player.js" defer></script>
     <script src="network.js" defer></script>
@@ -18,6 +19,46 @@
     <div class="viewport-wrapper">
       <div id="viewport">
         <div id="scene"></div>
+      </div>
+    </div>
+    <div class="viewport-wrapper">
+      <div id="viewmodel-animation">
+        <div id="viewmodel-position">
+          <div class="viewmodel">
+            <div class="box body">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="box aim">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="box mag">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="box aim2">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="crosshair-wrapper">
