feat: add sounds

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>css3d</title>
+
     <script
       src="https://unpkg.com/peerjs@1.5.4/dist/peerjs.min.js"
       defer
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"
+      integrity="sha512-xi/RZRIF/S0hJ+yJJYuZ5yk6/8pCiRlEXZzoguSMl+vk2i3m6UjUO/WcZ11blRL/O+rnj94JRGwt/CHbc9+6EA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="playermodel.css" />
     <link rel="stylesheet" href="viewmodel.css" />
@@ -14,6 +22,7 @@
     <script src="player.js" defer></script>
     <script src="network.js" defer></script>
     <script src="partner.js" defer></script>
+    <script src="snd.js" defer></script>
   </head>
   <body>
     <div class="viewport-wrapper">
