feat: aim down sights

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="viewport-wrapper">
       <div id="viewmodel-animation">
         <div id="viewmodel-position">
-          <div class="viewmodel">
+          <div class="viewmodel aim-down-sights">
             <div class="box body">
               <div></div>
               <div></div>
@@ -46,10 +46,10 @@
             <div class="box aim">
               <div></div>
               <div></div>
+              <div class="xh"></div>
               <div></div>
               <div></div>
-              <div></div>
-              <div></div>
+              <div class="xh"></div>
             </div>
             <div class="box mag">
               <div></div>
@@ -62,10 +62,10 @@
             <div class="box aim2">
               <div></div>
               <div></div>
+              <div class="xh"></div>
               <div></div>
               <div></div>
-              <div></div>
-              <div></div>
+              <div class="xh"></div>
             </div>
           </div>
         </div>
