feat: build walls

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="viewport-wrapper">
       <div id="viewmodel-animation">
         <div id="viewmodel-position">
-          <div class="viewmodel aim-down-sights">
+          <div class="viewmodel">
             <div class="box body">
               <div></div>
               <div></div>
