feat: aim down sights effect

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <div class="crosshair-wrapper">
       <div class="crosshair"></div>
     </div>
+    <div class="aim-backdrop"></div>
     <div class="hud">
       <div>
         <span id="health">100</span>
