feat: update menu

--- a/index.html
+++ b/index.html
@@ -95,12 +95,62 @@
       <h2>controls:</h2>
       <div class="row">
         <div class="col">
-          <img src="/assets/wasd.png" alt="WASD" />
+          <div class="item">
+            <div class="key">W</div>
+            <label>forward</label>
+          </div>
+          <div class="item">
+            <div class="key">A</div>
+            <label>right</label>
+          </div>
+          <div class="item">
+            <div class="key">S</div>
+            <label>backward</label>
+          </div>
+          <div class="item">
+            <div class="key">D</div>
+            <label>left</label>
+          </div>
+          <div class="item">
+            <div class="key">Shift</div>
+            <label>duck</label>
+          </div>
+          <div style="flex: 1 1 auto"></div>
           <label>movement</label>
         </div>
         <div class="col">
-          <img src="/assets/mouse.png" alt="mouse" />
-          <label>look & shoot</label>
+          <div class="item">
+            <img
+              src="/assets/mouse.svg"
+              alt="mouse"
+              style="filter: invert(1)"
+            />
+            <label>look</label>
+          </div>
+          <div class="item">
+            <img src="/assets/lmb.svg" alt="mouse" style="filter: invert(1)" />
+            <label>shoot</label>
+          </div>
+          <div class="item">
+            <img src="/assets/rmb.svg" alt="mouse" style="filter: invert(1)" />
+            <label>aim down on sights</label>
+          </div>
+          <div style="flex: 1 1 auto"></div>
+          <label>look</label>
+        </div>
+        <div class="col">
+          <div class="item">
+            <div class="key">E</div>
+            +
+            <img src="/assets/lmb.svg" alt="mouse" style="filter: invert(1)" />
+            <label>build</label>
+          </div>
+          <div class="item">
+            <div class="key">Tab</div>
+            <label>scoreboard</label>
+          </div>
+          <div style="flex: 1 1 auto"></div>
+          <label>misc</label>
         </div>
       </div>
       <h2>set name:</h2>
