feat: scoreboard show player count

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="key">Shift</div>
             <label>duck</label>
           </div>
-          <div style="flex: 1 1 auto"></div>
+          <div style="flex: 1 1 100%"></div>
           <label>movement</label>
         </div>
         <div class="col">
@@ -141,7 +141,7 @@
             <img src="/assets/rmb.svg" alt="mouse" style="filter: invert(1)" />
             <label>aim down on sights</label>
           </div>
-          <div style="flex: 1 1 auto"></div>
+          <div style="flex: 1 1 100%"></div>
           <label>look</label>
         </div>
         <div class="col">
@@ -159,7 +159,7 @@
             <div class="key">C</div>
             <label>activate chat</label>
           </div>
-          <div style="flex: 1 1 auto"></div>
+          <div style="flex: 1 1 100%"></div>
           <label>misc</label>
         </div>
       </div>
@@ -172,7 +172,10 @@
       </form>
     </dialog>
     <div id="scoreboard">
-      <h1>scoreboard</h1>
+      <h1>
+        scoreboard
+        <div>players 10/10</div>
+      </h1>
       <table>
         <thead>
           <tr>
