feat: show deathmsg

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       <input />
     </div>
     <div id="chat"></div>
+    <div id="deathmessages"></div>
     <dialog class="menu">
       <h1>blockshooter</h1>
       <h2>controls:</h2>
