fix: add jump instruction into menu and fix scrolling issue

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
             <label>left</label>
           </div>
           <div class="item">
+            <div class="key">Space</div>
+            <label>jump</label>
+          </div>
+          <div class="item">
             <div class="key">Shift</div>
             <label>duck</label>
           </div>
@@ -169,7 +173,9 @@
         <div style="width: 100%">
           <input placeholder="xXx_Pu$$Y_HUNT3R_xXx" required name="name" />
         </div>
-        <button type="submit">play</button>
+        <div class="btn-holder">
+          <button type="submit">play</button>
+        </div>
       </form>
     </dialog>
     <div id="scoreboard">
