refactor: create separate files for styles

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="playermodel.css" />
-    <link rel="stylesheet" href="viewmodel.css" />
-    <script src="world.js" defer></script>
-    <script src="player.js" defer></script>
-    <script src="network.js" defer></script>
-    <script src="partner.js" defer></script>
-    <script src="snd.js" defer></script>
-    <script src="scoreboard.js" defer></script>
-    <script src="chat.js" defer></script>
+    <!-- own styles -->
+    <link rel="stylesheet" href="styles/index.css" />
+
+    <!-- own scripts -->
+    <script src="js/world.js" defer></script>
+    <script src="js/player.js" defer></script>
+    <script src="js/network.js" defer></script>
+    <script src="js/partner.js" defer></script>
+    <script src="js/snd.js" defer></script>
+    <script src="js/scoreboard.js" defer></script>
+    <script src="js/chat.js" defer></script>
   </head>
   <body>
     <div class="viewport-wrapper">
