feat: generate powerups

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="js/snd.js" defer></script>
     <script src="js/scoreboard.js" defer></script>
     <script src="js/chat.js" defer></script>
+    <script src="js/powerups.js" defer></script>
   </head>
   <body>
     <div class="viewport-wrapper">
