feat: add gun to playermodel

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
               <div></div>
               <div class="xh"></div>
             </div>
+            <div class="box arm">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
           </div>
         </div>
       </div>
