--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <title>blockshooter</title>
 
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/icon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/icon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <script
       src="https://unpkg.com/peerjs@1.5.4/dist/peerjs.min.js"
       defer
