fix: use relative paths to be able to run in subdirectory

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/icon/apple-touch-icon.png"
+      href="./icon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/icon/favicon-32x32.png"
+      href="./icon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/icon/favicon-16x16.png"
+      href="./icon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="./site.webmanifest" />
 
     <script
       src="https://unpkg.com/peerjs@1.5.4/dist/peerjs.min.js"
@@ -35,17 +35,28 @@
     ></script>
 
     <!-- own styles -->
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/aim-backdrop.css" />
+    <link rel="stylesheet" href="./styles/chat.css" />
+    <link rel="stylesheet" href="./styles/crosshair.css" />
+    <link rel="stylesheet" href="./styles/deathmessages.css" />
+    <link rel="stylesheet" href="./styles/hud.css" />
+    <link rel="stylesheet" href="./styles/menu.css" />
+    <link rel="stylesheet" href="./styles/playermodel.css" />
+    <link rel="stylesheet" href="./styles/scoreboard.css" />
+    <link rel="stylesheet" href="./styles/score-msg.css" />
+    <link rel="stylesheet" href="./styles/viewmodel.css" />
+    <link rel="stylesheet" href="./styles/powerup.css" />
 
     <!-- own scripts -->
-    <script src="js/world.js" defer></script>
-    <script src="js/player.js" defer></script>
-    <script src="js/network.js" defer></script>
-    <script src="js/partner.js" defer></script>
-    <script src="js/snd.js" defer></script>
-    <script src="js/scoreboard.js" defer></script>
-    <script src="js/chat.js" defer></script>
-    <script src="js/powerups.js" defer></script>
+    <script src="./js/world.js" defer></script>
+    <script src="./js/player.js" defer></script>
+    <script src="./js/network.js" defer></script>
+    <script src="./js/partner.js" defer></script>
+    <script src="./js/snd.js" defer></script>
+    <script src="./js/scoreboard.js" defer></script>
+    <script src="./js/chat.js" defer></script>
+    <script src="./js/powerups.js" defer></script>
   </head>
   <body>
     <div class="viewport-wrapper">
@@ -161,18 +172,18 @@
         <div class="col">
           <div class="item">
             <img
-              src="/assets/mouse.svg"
+              src="./assets/mouse.svg"
               alt="mouse"
               style="filter: invert(1)"
             />
             <label>look</label>
           </div>
           <div class="item">
-            <img src="/assets/lmb.svg" alt="mouse" style="filter: invert(1)" />
+            <img src="./assets/lmb.svg" alt="mouse" style="filter: invert(1)" />
             <label>shoot</label>
           </div>
           <div class="item">
-            <img src="/assets/rmb.svg" alt="mouse" style="filter: invert(1)" />
+            <img src="./assets/rmb.svg" alt="mouse" style="filter: invert(1)" />
             <label>aim down on sights</label>
           </div>
           <div style="flex: 1 1 100%"></div>
@@ -182,7 +193,7 @@
           <div class="item">
             <div class="key">E</div>
             +
-            <img src="/assets/lmb.svg" alt="mouse" style="filter: invert(1)" />
+            <img src="./assets/lmb.svg" alt="mouse" style="filter: invert(1)" />
             <label>build</label>
           </div>
           <div class="item">
